Dolphin taming with primal and redomesticate compat, also anchovy variants